Cambio en el index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </li>
             <li>
               <a href="#"
-                ><i class="fa fa-envelope-o"></i> alvarez.cf98@gmail.com</a
+                ><i class="fa fa-envelope-o"></i> danielaltenir@gmail.com</a
               >
             </li>
             <li>
@@ -242,7 +242,7 @@
                 <img src="./img/product09.png" alt="" />
               </div>
               <div class="shop-body">
-                <h3>Coleccion<br />Camaras</h3>
+                <h3>Prueba<br />Entornos</h3>
                 <a href="store_camaras.html" class="cta-btn"
                   >Nuevos
                   <i class="fa fa-arrow-circle-right"></i>
